deploy: suse-projects/source@b324c6758762ca7e668c009bf44557d41ee9479b

--- a/index.html
+++ b/index.html
@@ -271,21 +271,21 @@ Repo
 <card>
 <div class=card--component data-background=white>
 <div class=card-header>
-<a href=https://hypper.io><img class=card-header-img src=/logos/hypper.svg alt="Hypper logo"></a>
+<a href=https://longhorn.io/><img class=card-header-img src=/logos/longhorn.svg alt="Longhorn logo"></a>
 </div>
 <div class=card-body data-align=center>
-<p class=card-body-copy>A dependency-aware package manager built on Helm.</p>
+<p class=card-body-copy>Cloud-Native distributed block storage built on and for Kubernetes.</p>
 </div>
 <div class=card-footer data-layout=2-up>
 <div class=card-footer-content data-align=center>
-<a class=card-footer-link href=https://hypper.io>
+<a class=card-footer-link href=https://longhorn.io/>
 <i class="card-footer-icon fa fa-fw fa-globe"></i>
 <br>
 Website
 </a>
 </div>
 <div class=card-footer-content data-align=center>
-<a class=card-footer-link href=https://github.com/rancher-sandbox/hypper>
+<a class=card-footer-link href=https://github.com/longhorn/longhorn>
 <i class="card-footer-icon fab fa-github"></i>
 <br>
 Repo
